--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bootSVD
 Title: Fast, Exact Bootstrap Principal Component Analysis for High Dimensional
     Data
-Description: Fast, exact bootstrap Principal Component Analysis (and Singular
-    Value Decompositions) for high dimensional data
+Description: Implements fast, exact bootstrap Principal Component Analysis and Singular
+    Value Decompositions for high dimensional data, as described in (arxiv.org/abs/1405.0922).
 Version: 0.1
 Author: Aaron Fisher <fisher@jhu.edu>
 Maintainer: Aaron Fisher <fisher@jhu.edu>
