--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(genQ)
 export(getMomentsAndMomentCI)
 export(os)
 export(qrSVD)
-export(reindexScalarsByK)
+export(reindexMatricesByK)
 export(reindexVectorsByK)
 export(simEEG)
 import(ff)
