--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,14 @@ Title: Fast, Exact Bootstrap Principal Component Analysis for High Dimensional
     Data
 Description: Implements fast, exact bootstrap Principal Component Analysis and
     Singular Value Decompositions for high dimensional data, as described in
-    (arxiv.org/abs/1405.0922).
-Version: 0.1
+    (arxiv.org/abs/1405.0922). For data matrices that are too large to operate
+    on in memory, users can input objects with class 'ff' (see the 'ff'
+    package), where the actual data is stored in disk. In response, this
+    package will implement a block matrix algebra procedure for calculating the
+    principal components (PCs) and bootstrap PCs. Depending on options set by
+    the user, the 'parallel' package is used to parallelize the calculation of
+    the bootstrap PCs.
+Version: 0.2
 Author: Aaron Fisher <fisher@jhu.edu>
 Maintainer: Aaron Fisher <fisher@jhu.edu>
 Depends:
