a more traditional use of mclapply; changing link format in DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,16 +3,17 @@ Title: Fast, Exact Bootstrap Principal Component Analysis for High Dimensional
     Data
 Description: Implements fast, exact bootstrap Principal Component Analysis and
     Singular Value Decompositions for high dimensional data, as described in
-    (arxiv.org/abs/1405.0922). For data matrices that are too large to operate
+    <http://arxiv.org/abs/1405.0922>. For data matrices that are too large to operate
     on in memory, users can input objects with class 'ff' (see the 'ff'
     package), where the actual data is stored on disk. In response, this
     package will implement a block matrix algebra procedure for calculating the
     principal components (PCs) and bootstrap PCs. Depending on options set by
     the user, the 'parallel' package can be used to parallelize the calculation of
     the bootstrap PCs.
-Version: 0.3
+Version: 0.5
 Author: Aaron Fisher <fisher@jhu.edu>
 Maintainer: Aaron Fisher <fisher@jhu.edu>
+URL: http://arxiv.org/abs/1405.0922
 Depends:
     R (>= 3.0.2)
 Imports:
