adding more explicit dependencies with importFrom, to help track which specific functions are depended on, and be able to react if depended on packages change
Resolve R CMD check note by adding importFrom(stats, quantile) and other items

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,5 +16,13 @@ export(qrSVD)
 export(reindexMatricesByK)
 export(reindexVectorsByK)
 export(simEEG)
-import(ff)
-import(parallel)
+importFrom(ff,.rambytes)
+importFrom(ff,ff)
+importFrom(ff,ffapply)
+importFrom(parallel,mclapply)
+importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,var)
+importFrom(utils,object.size)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
