Update link formatting

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,4 +23,6 @@ Imports:
     parallel
 License: GPL-2
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.2
+Encoding: UTF-8
+Maintainer: Aaron Fisher <afishe27@alumni.jh.edu>
